// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
  id="users-page"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="users.page"
  />
  <Header
    loading={true}
    onUpdateUsers={[Function]}
  />
  <Search
    query={
      Object {
        "search": "",
      }
    }
    updateQuery={[Function]}
  />
  <UsersList
    currentUser={
      Object {
        "isLoggedIn": true,
        "login": "luke",
      }
    }
    identityProviders={Array []}
    onUpdateUsers={[Function]}
    organizationsEnabled={true}
    updateTokensCount={[Function]}
    users={Array []}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
  id="users-page"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="users.page"
  />
  <Header
    loading={false}
    onUpdateUsers={[Function]}
  />
  <Search
    query={
      Object {
        "search": "",
      }
    }
    updateQuery={[Function]}
  />
  <UsersList
    currentUser={
      Object {
        "isLoggedIn": true,
        "login": "luke",
      }
    }
    identityProviders={
      Array [
        Object {
          "backgroundColor": "blue",
          "iconPath": "icon/path",
          "key": "foo",
          "name": "Foo Provider",
        },
      ]
    }
    onUpdateUsers={[Function]}
    organizationsEnabled={true}
    updateTokensCount={[Function]}
    users={
      Array [
        Object {
          "active": true,
          "local": false,
          "login": "luke",
          "name": "Luke",
          "scmAccounts": Array [],
        },
      ]
    }
  />
  <ListFooter
    count={1}
    loadMore={[Function]}
    ready={true}
    total={2}
  />
</div>
`;
